--- a/index.html
+++ b/index.html
@@ -760,8 +760,11 @@
                 train.style.transform = 'translateY(0)';
             }, 150);
         }, 3000);
+        // الكود الغلط اللي عندك
+window.location.href = '1.HTML';
     </script>
 </body>
 </html>
+
 
 
