--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
         body {
             background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), 
-                        url('https://www.bing.com/images/search?view=detailV2&ccid=ZXrPls1Y&id=33BA65FE40CDABF5B6E3BF5E7168C77DEAF18277&thid=OIP.ZXrPls1YwKX3tlUeX6YM-gHaE7&mediaurl=https%3A%2F%2Fcolleygatemedia.com%2Fimages%2FRailway%2Frailway6.jpg&cdnurl=https%3A%2F%2Fth.bing.com%2Fth%2Fid%2FR.657acf96cd58c0a5f7b6551e5fa60cfa%3Frik%3Dd4Lx6n3HaHFevw%26pid%3DImgRaw%26r%3D0&exph=1365&expw=2048&q=railway&FORM=IRPRST&ck=725569DB9E0C747DCA1DFFBC9B6BDD87&selectedIndex=0&itb=0&cw=2294&ch=1109&ajaxhist=0&ajaxserp=0.com ');
+                        url('https://www.bing.com/images/search?view=detailV2&ccid=ZXrPls1Y&id=33BA65FE40CDABF5B6E3BF5E7168C77DEAF18277&thid=OIP.ZXrPls1YwKX3tlUeX6YM-gHaE7&mediaurl=https%3A%2F%2Fcolleygatemedia.com%2Fimages%2FRailway%2Frailway6.jpg&cdnurl=https%3A%2F%2Fth.bing.com%2Fth%2Fid%2FR.657acf96cd58c0a5f7b6551e5fa60cfa%3Frik%3Dd4Lx6n3HaHFevw%26pid%3DImgRaw%26r%3D0&exph=1365&expw=2048&q=railway&FORM=IRPRST&ck=725569DB9E0C747DCA1DFFBC9B6BDD87&selectedIndex=0&itb=0&cw=2294&ch=1109&ajaxhist=0&ajaxserp=0 ');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -1163,5 +1163,6 @@
     </script>
 </body>
 </html>
+
 
 
